--- a/src/components/Switcher/Switcher.scss
+++ b/src/components/Switcher/Switcher.scss
@@ -14,16 +14,50 @@
     aspect-ratio: 1/1;
   }
 
-  &__button {
+  &__button-wrapper {
     @include button-reset-style;
-    @include border;
 
     position: absolute;
     z-index: 5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     box-sizing: border-box;
     width: 56px;
     height: 56px;
-    background: $backgroundColor;
+    background: transparent;
+    border: 1px solid transparent;
+    border-radius: 50%;
     cursor: pointer;
+
+    &:hover {
+      background: $backgroundColor;
+      @include border;
+    }
+  }
+
+  &__button {
+    @include button-reset-style;
+
+    width: 6px;
+    height: 6px;
+    font-size: 1px;
+    background-color: $textColor;
+    border-radius: 50%;
+    visibility: visible;
+    cursor: pointer;
+    opacity: 1;
+  }
+
+  &__button-wrapper:hover &__button {
+    width: 100%;
+    height: 100%;
+    font-size: 14px;
+    background-color: transparent;
+  }
+
+  &__button-label {
+    position: absolute;
+    left: 100px;
   }
 }
