--- a/src/components/Switcher/Switcher.scss
+++ b/src/components/Switcher/Switcher.scss
@@ -3,14 +3,14 @@
 
 .switcher {
   &__wrapper {
-    @include border;
-
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
     width: 100%;
+    border: 1px solid $switcherBorderColor;
+    border-radius: 50%;
     aspect-ratio: 1/1;
   }
 
@@ -30,9 +30,11 @@
     border-radius: 50%;
     cursor: pointer;
 
+    &_active,
     &:hover {
       background: $backgroundColor;
-      @include border;
+      border: 1px solid $buttonBorderColor;
+      transition: $transition;
     }
   }
 
@@ -49,15 +51,37 @@
     opacity: 1;
   }
 
-  &__button-wrapper:hover &__button {
-    width: 100%;
-    height: 100%;
-    font-size: 14px;
-    background-color: transparent;
+  &__button-index {
+    visibility: hidden;
+    opacity: 0;
   }
 
   &__button-label {
     position: absolute;
     left: 100px;
+    visibility: hidden;
+    cursor: default;
+    opacity: 0;
+  }
+
+  &__button-wrapper_active &__button,
+  &__button-wrapper:hover &__button {
+    width: 100%;
+    height: 100%;
+    font-size: 14px;
+    background-color: transparent;
+    transition: $transition;
+  }
+
+  &__button-wrapper_active &__button-index,
+  &__button-wrapper:hover &__button-index {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  &__button-wrapper_active &__button-label_visible {
+    visibility: visible;
+    opacity: 1;
+    transition: $transition;
   }
 }
