--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,3 +1,6 @@
-$borderColor: rgb(48 62 88 / 50%);
 $backgroundColor: #f4f5f9;
 $textColor: #42567a;
+$buttonBorderColor: rgb(48 62 88 / 50%);
+$switcherBorderColor: rgb(66 86 122 / 20%);
+
+$transition: all 300ms linear;
