--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -6,3 +6,14 @@
   background: none;
   border: none;
 }
+
+@mixin tip-style() {
+  width: auto;
+  height: 8px;
+  border-bottom: 2px solid $textColor;
+  border-left: 2px solid $textColor;
+  transform: rotate(45deg);
+  cursor: pointer;
+  content: '';
+  aspect-ratio: 1/1;
+}
