--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -10,8 +10,8 @@
 @mixin tip-style() {
   width: auto;
   height: 8px;
-  border-bottom: 2px solid $textColor;
-  border-left: 2px solid $textColor;
+  border-bottom: 2px solid $text-color;
+  border-left: 2px solid $text-color;
   transform: rotate(45deg);
   cursor: pointer;
   content: '';
