--- a/src/components/Controller/Controller.scss
+++ b/src/components/Controller/Controller.scss
@@ -1,5 +1,5 @@
-@import '../../styles/_mixins';
-@import '../../styles/_vars';
+@import '../../styles/mixins';
+@import '../../styles/vars';
 
 .controller {
   &__button {
@@ -11,7 +11,7 @@
     justify-content: center;
     width: 50px;
     height: 50px;
-    border: 1px solid $buttonBorderColor;
+    border: 1px solid $button-border-color;
     border-radius: 50%;
     cursor: pointer;
 
