style: components Controller and Switcher

--- a/src/components/Switcher/Switcher.scss
+++ b/src/components/Switcher/Switcher.scss
@@ -16,6 +16,7 @@
 
   &__button-wrapper {
     @include button-reset-style;
+    box-sizing: border-box;
 
     position: absolute;
     z-index: 5;
@@ -40,7 +41,7 @@
 
   &__button {
     @include button-reset-style;
-
+    box-sizing: border-box;
     width: 6px;
     height: 6px;
     font-size: 1px;
@@ -52,13 +53,15 @@
   }
 
   &__button-index {
+    @include font-main(20px, 400, 30px);
     visibility: hidden;
     opacity: 0;
   }
 
   &__button-label {
+    @include font-main(20px, 700, 30px);
     position: absolute;
-    left: 100px;
+    left: 75px;
     visibility: hidden;
     cursor: default;
     opacity: 0;
