--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -8,4 +8,6 @@ $date-from-color: #5d5fef;
 $date-to-color: #ef5da8;
 $gradient: linear-gradient($date-from-color 0%, $date-to-color 100%);
 
+$font-main: 'PT Sans', 'Arial', sans-serif;
+
 $transition: all 300ms linear;
