--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,20 +1,23 @@
 @font-face {
-  font-family: "Bebas Neue";
-  src: url("../assets/fonts/bebas-neue-regular.woff2") format("woff2"), url("../assets/fonts/bebas-neue-regular.woff") format("woff");
   font-weight: 400;
+  font-family: 'Bebas Neue';
   font-style: normal;
+  src: url('../assets/fonts/bebas-neue-regular.woff2') format('woff2'),
+    url('../assets/fonts/bebas-neue-regular.woff') format('woff');
 }
 
 @font-face {
-  font-family: "PT Sans";
-  src: url("../assets/fonts/pt-sans-regular.woff2") format("woff2"), url("../assets/fonts/pt-sans-regular.woff") format("woff");
   font-weight: 400;
+  font-family: 'PT Sans';
   font-style: normal;
+  src: url('../assets/fonts/pt-sans-regular.woff2') format('woff2'),
+    url('../assets/fonts/pt-sans-regular.woff') format('woff');
 }
 
 @font-face {
-  font-family: "PT Sans";
-  src: url("../assets/fonts/pt-sans-bold.woff2") format("woff2"), url("../assets/fonts/pt-sans-bold.woff") format("woff");
   font-weight: 700;
+  font-family: 'PT Sans';
   font-style: normal;
+  src: url('../assets/fonts/pt-sans-bold.woff2') format('woff2'),
+    url('../assets/fonts/pt-sans-bold.woff') format('woff');
 }
