--- a/src/components/Controller/Controller.scss
+++ b/src/components/Controller/Controller.scss
@@ -5,12 +5,12 @@
   position: relative;
   display: grid;
   grid-template-rows: repeat(4, auto);
-  grid-template-columns: minmax(353px, 1fr) minmax(609px, 1fr) minmax(
+  grid-template-columns: 80px minmax(353px, 1fr) minmax(610px, 1fr) minmax(
       353px,
       1fr
     );
   padding-top: 166px;
-  padding-left: 80px;
+
   border-right: 1px solid $grid-color;
   border-left: 1px solid $grid-color;
 
@@ -35,38 +35,49 @@
 
   &__header {
     @include font-main(56px, 700, 67.2px);
-
+    cursor: default;
     grid-row: 1/2;
-    grid-column: 1/2;
+    grid-column: 2/3;
     box-sizing: border-box;
     max-width: 353px;
     margin: 0;
+    position: relative;
+
+    &::before {
+      content: '';
+      width: 5px;
+      height: calc(100% - 15px);
+      top: 11px;
+      left: -80px;
+      background: $gradient;
+      position: absolute;
+    }
   }
 
   &__switcher {
     position: relative;
     z-index: 10;
     grid-row: 1/4;
-    grid-column: 2/3;
+    grid-column: 3/4;
     justify-self: start;
     box-sizing: border-box;
     width: 100%;
     padding-top: 47px;
-    padding-right: 78px;
+    padding-right: 79px;
   }
 
   &__counter {
     @include font-main(15px, 400, 18px);
-
+    cursor: default;
     grid-row: 2/3;
-    grid-column: 1/2;
+    grid-column: 2/3;
     padding-top: 395px;
   }
 
   &__buttons {
     display: flex;
     grid-row: 3/4;
-    grid-column: 1/2;
+    grid-column: 2/3;
     padding-top: 21px;
     column-gap: 20px;
   }
@@ -105,5 +116,14 @@
     z-index: 0;
     align-self: center;
     justify-self: center;
+  }
+
+  &__slider{
+   
+    padding-top: 56px;
+    grid-row: 4/5;
+    grid-column: 1/5;
+    min-height: 200px;
+
   }
 }
