--- a/src/components/Years/Years.scss
+++ b/src/components/Years/Years.scss
@@ -3,15 +3,23 @@
 
 .years {
   @include font-main(200px, 700, 160px);
+  cursor: default;
+  padding-bottom: 100px;
 
   display: flex;
-  column-gap: 50px;
+  column-gap: 95px;
+  letter-spacing: -4px;
+
 
   &__year_type_from {
     color: $date-from-color;
+  
+   
   }
 
   &__year_type_to {
     color: $date-to-color;
+    padding-right: 40px;
+
   }
 }
