--- a/src/pages/LandingPage/LandingPage.scss
+++ b/src/pages/LandingPage/LandingPage.scss
@@ -1,4 +1,8 @@
+@import '../../styles/mixins';
+@import '../../styles/vars';
+
 .landing-page {
-  padding-right: 160px;
   padding-left: 320px;
+  
+  max-width: 1440px;
 }
