--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -3,11 +3,17 @@ $text-color: #42567a;
 $button-border-color: rgb(48 62 88 / 50%);
 $switcher-border-color: rgb(66 86 122 / 20%);
 $grid-color: rgb(66 86 122 / 10%);
-$headers-color: #3877ee;
+$slider-labels-color: #3877ee;
 $date-from-color: #5d5fef;
 $date-to-color: #ef5da8;
 $gradient: linear-gradient($date-from-color 0%, $date-to-color 100%);
+$background: #F4F5F9;
+$nav-button-background: #FFFFFF;
+$nav-button-shadow: 0px 0px 15px rgba(56, 119, 238, 0.1);
+
+
 
 $font-main: 'PT Sans', 'Arial', sans-serif;
+$font-slider-labels: 'Bebas Neue', 'Arial', sans-serif;
 
 $transition: all 300ms linear;
