--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -2,18 +2,18 @@
 @import '../../styles/vars';
 
 .slider {
+  position: relative;
+  display: flex;
+  align-items: center;
   max-width: 1270px;
   // padding-left: 80px;
   // border: 1px solid red;
   margin-left: 80px;
-  position: relative;
-  display: flex;
-  align-items: center;
 
-  &__slide{
+  &__slide {
     max-width: 320px;
-      cursor: default;
-   }
+    cursor: default;
+  }
 
   &__slide-label {
     color: $slider-labels-color;
@@ -21,58 +21,54 @@
     font-size: 25px;
     font-family: $font-slider-labels;
     line-height: 120%;
-   }
-
-  &__slide-description{
-@include font-main(20px, 400, 30px);
-margin: 0;
-padding-top: 15px;
-
   }
 
+  &__slide-description {
+    @include font-main(20px, 400, 30px);
 
-  &__button  {
+    margin: 0;
+    padding-top: 15px;
+  }
+
+  &__button {
     @include button-reset-style;
-    
-    background: $nav-button-background;
+
+    position: absolute;
     width: 40px;
     height: 40px;
+    background: $nav-button-background;
     border-radius: 50%;
-    
     box-shadow: $nav-button-shadow;
-    position: absolute;
 
-    &:disabled{
+    &:disabled {
       visibility: hidden;
     }
 
-    &:after {
+    &::after {
       @include tip-style;
-      height: 6px;
-      display: flex;
-      border-color: $slider-labels-color;
+
       bottom: 15px;
+      display: flex;
+      height: 6px;
+      border-color: $slider-labels-color;
     }
   }
 
   &__button_type_prev {
-
     left: -60px;
-   
 
-    &:after {
+    &::after {
       position: absolute;
-      transform: rotate(45deg);
       right: 15px;
+      transform: rotate(45deg);
     }
   }
 
   &__button_type_next {
-    right: -50px;
     position: absolute;
-    
+    right: -50px;
 
-    &:after {
+    &::after {
       position: absolute;
       left: 15px;
       transform: rotate(-135deg);
