--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -7,11 +7,9 @@ $slider-labels-color: #3877ee;
 $date-from-color: #5d5fef;
 $date-to-color: #ef5da8;
 $gradient: linear-gradient($date-from-color 0%, $date-to-color 100%);
-$background: #F4F5F9;
-$nav-button-background: #FFFFFF;
-$nav-button-shadow: 0px 0px 15px rgba(56, 119, 238, 0.1);
-
-
+$background: #f4f5f9;
+$nav-button-background: #fff;
+$nav-button-shadow: 0 0 15px rgb(56 119 238 / 10%);
 
 $font-main: 'PT Sans', 'Arial', sans-serif;
 $font-slider-labels: 'Bebas Neue', 'Arial', sans-serif;
