--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -24,3 +24,13 @@
   font-family: $font-main;
   line-height: $line-height;
 }
+
+@mixin visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  white-space: nowrap;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+}
