--- a/src/pages/LandingPage/LandingPage.scss
+++ b/src/pages/LandingPage/LandingPage.scss
@@ -2,6 +2,6 @@
 @import '../../styles/vars';
 
 .landing-page {
-  max-width: 1440px;
-  padding-left: 320px;
+  max-width: $xl;
+  margin: auto;
 }
