--- a/src/components/Controller/Controller.scss
+++ b/src/components/Controller/Controller.scss
@@ -5,13 +5,26 @@
   position: relative;
   display: grid;
   grid-template-rows: repeat(4, auto);
-  grid-template-columns: 80px minmax(353px, 1fr) minmax(610px, 1fr) minmax(
+  grid-template-columns: 80px minmax(353px, 1fr) minmax(300px, 610px) minmax(
       353px,
       1fr
     );
   padding-top: 166px;
+  padding-bottom: 30px;
   border-right: 1px solid $grid-color;
   border-left: 1px solid $grid-color;
+
+  @include media-breakpoint-down($xl) {
+    grid-template-columns: 80px 0.75fr minmax(300px, 610px) 0.75fr;
+  }
+
+  @include media-breakpoint-down($lg) {
+    grid-template-columns: 80px 0.5fr minmax(300px, 500px) 0.5fr;
+  }
+
+  @include media-breakpoint-down($md) {
+    grid-template-columns: 80px 0.5fr minmax(300px, 400px) 0.5fr;
+  }
 
   // &::before{
   //   content: '';
@@ -33,7 +46,7 @@
   // }
 
   &__header {
-    @include font-main(56px, 700, 67.2px);
+    @include font-main(56px, 700, 120%);
 
     position: relative;
     grid-row: 1/2;
@@ -43,6 +56,20 @@
     margin: 0;
     cursor: default;
 
+    @include media-breakpoint-down($xl) {
+      @include font-main(45px, 700, 120%);
+
+      grid-column: 2/4;
+    }
+
+    @include media-breakpoint-down($sm) {
+      @include font-main(30px, 700, 120%);
+    }
+
+    @include media-breakpoint-down($xs) {
+      @include font-main(20px, 700, 120%);
+    }
+
     &::before {
       position: absolute;
       top: 11px;
@@ -51,6 +78,10 @@
       height: calc(100% - 15px);
       background: $gradient;
       content: '';
+
+      @include media-breakpoint-down($xl) {
+        left: -70px;
+      }
     }
   }
 
@@ -69,6 +100,10 @@
     width: 100%;
     padding-top: 47px;
     padding-right: 79px;
+
+    @include media-breakpoint-down($lg) {
+      padding-right: 0;
+    }
   }
 
   &__counter {
@@ -78,6 +113,10 @@
     grid-column: 2/3;
     padding-top: 395px;
     cursor: default;
+
+    @include media-breakpoint-down($lg) {
+      padding-top: 300px;
+    }
   }
 
   &__buttons {
