--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -15,3 +15,12 @@ $font-main: 'PT Sans', 'Arial', sans-serif;
 $font-slider-labels: 'Bebas Neue', 'Arial', sans-serif;
 
 $transition: all 300ms linear;
+
+$xxs: 320px;
+$xs: 575px;
+$sm: 767px;
+$md: 991px;
+$lg: 1199px;
+$xl: 1440px;
+$xxl: 1920px;
+$wrapper-width: 1170px;
