--- a/src/components/Controller/Controller.scss
+++ b/src/components/Controller/Controller.scss
@@ -26,6 +26,12 @@
     grid-template-columns: 80px 0.5fr minmax(300px, 400px) 0.5fr;
   }
 
+  @include media-breakpoint-down($sm) {
+    grid-template-rows: repeat(8, auto);
+    grid-template-columns: 100%;
+    padding: 58px 20px 30px;
+  }
+
   // &::before{
   //   content: '';
   //   align-self: center;
@@ -60,10 +66,13 @@
       @include font-main(45px, 700, 120%);
 
       grid-column: 2/4;
+      max-width: 123px;
     }
 
     @include media-breakpoint-down($sm) {
       @include font-main(30px, 700, 120%);
+
+      grid-column: 1/2;
     }
 
     @include media-breakpoint-down($xs) {
@@ -86,8 +95,14 @@
   }
 
   &__category-header {
-    @include font-main(30px, 700, 30px);
-    @include visually-hidden;
+    @include font-main(22px, 700, 30px);
+
+    grid-row: 3/4;
+    // padding-top: 30px;
+    grid-column: 1/2;
+    @include media-breakpoint-up($sm) {
+      @include visually-hidden;
+    }
   }
 
   &__switcher {
@@ -104,6 +119,13 @@
     @include media-breakpoint-down($lg) {
       padding-right: 0;
     }
+    @include media-breakpoint-down($sm) {
+      position: absolute;
+      bottom: 18px;
+      grid-row: 5/6;
+      grid-column: 1/2;
+      padding: unset;
+    }
   }
 
   &__counter {
@@ -117,6 +139,17 @@
     @include media-breakpoint-down($lg) {
       padding-top: 300px;
     }
+
+    @include media-breakpoint-down($sm) {
+      grid-row: 4/5;
+      grid-column: 1/2;
+      padding-top: 0;
+    }
+
+    @include media-breakpoint-down($xs) {
+      padding-top: 0;
+      font-size: 13px;
+    }
   }
 
   &__buttons {
@@ -125,6 +158,17 @@
     grid-column: 2/3;
     padding-top: 21px;
     column-gap: 20px;
+
+    @include media-breakpoint-down($sm) {
+      grid-row: 5/6;
+      grid-column: 1/2;
+      justify-self: start;
+    }
+
+    @include media-breakpoint-down($xs) {
+      padding-top: 8px;
+      column-gap: 6px;
+    }
   }
 
   &__button {
@@ -140,6 +184,11 @@
     border-radius: 50%;
     cursor: pointer;
 
+    @include media-breakpoint-down($sm) {
+      width: 25px;
+      height: 25px;
+    }
+
     &:disabled {
       cursor: auto;
       opacity: 0.5;
@@ -147,6 +196,9 @@
 
     &::after {
       @include tip-style;
+      @include media-breakpoint-down($xs) {
+        height: 4px;
+      }
     }
 
     &-next {
@@ -161,6 +213,19 @@
     z-index: 0;
     align-self: center;
     justify-self: center;
+    @include media-breakpoint-down($sm) {
+      position: static;
+      grid-row: 2/3;
+      grid-column: 1/2;
+      align-self: unset;
+      justify-self: center;
+      // width: minmax(273px, 767px);
+      width: 100%;
+    }
+
+    @include media-breakpoint-down($xs) {
+      padding-top: 54px;
+    }
   }
 
   &__slider {
@@ -168,5 +233,22 @@
     grid-column: 1/5;
     min-height: 200px;
     padding-top: 56px;
+
+    @include media-breakpoint-down($sm) {
+      grid-row: 3/4;
+      grid-column: 1/2;
+      min-height: 191px;
+      margin-top: 100px;
+      padding-top: 0;
+      padding-top: 18px;
+      border-top: 2px solid $grid-color;
+    }
+
+    // @include media-breakpoint-down($xs){
+    //   padding-top: 0;
+    //   margin-top: 100px;
+    //   padding-top: 18px;
+    //   min-height: 191px;
+    // }
   }
 }
