--- a/src/components/Years/Years.scss
+++ b/src/components/Years/Years.scss
@@ -24,6 +24,10 @@
 
   @include media-breakpoint-down($sm) {
     @include font-main(56px, 700, 72px);
+
+    justify-content: center;
+    padding: 0;
+    column-gap: 60px;
   }
 
   &__year_type_from {
@@ -31,6 +35,13 @@
 
     @include media-breakpoint-down($lg) {
       padding-left: 8%;
+    }
+    @include media-breakpoint-down($sm) {
+      padding: 0;
+    }
+
+    @include media-breakpoint-down($xs) {
+      color: $slider-labels-color;
     }
   }
 
@@ -40,6 +51,10 @@
 
     @include media-breakpoint-down($xl) {
       padding-right: 0;
+    }
+
+    @include media-breakpoint-down($xs) {
+      padding-right: 20px;
     }
   }
 }
