--- a/src/components/Controller/Controller.scss
+++ b/src/components/Controller/Controller.scss
@@ -32,24 +32,41 @@
     padding: 58px 20px 30px;
   }
 
-  // &::before{
-  //   content: '';
-  //   align-self: center;
-  //   position: absolute;
-  //   width: 100%;
-  //   height: 1px;
-  //   background-color: $grid-color;
-  // }
+  &::before,
+  &::after {
+    position: absolute;
+    background-color: $grid-color;
+    content: '';
+    @include media-breakpoint-down($sm) {
+      content: none;
+    }
+  }
 
-  // &::after{
-  //   content: '';
-  //   top: 0px;
-  //   justify-self: center;
-  //   position: absolute;
-  //   height: 100%;
-  //   width: 1px;
-  //   background-color: $grid-color;
-  // }
+  &::before {
+    align-self: center;
+    width: 100%;
+    height: 1px;
+    margin-bottom: 110px;
+
+    @include media-breakpoint-down($lg) {
+      margin-bottom: 80px;
+    }
+
+    @include media-breakpoint-down($md) {
+      margin-bottom: 120px;
+    }
+  }
+
+  &::after {
+    top: 0;
+    justify-self: center;
+    width: 1px;
+    height: 100%;
+
+    @include media-breakpoint-down($lg) {
+      margin-left: 80px;
+    }
+  }
 
   &__header {
     @include font-main(56px, 700, 120%);
@@ -98,7 +115,6 @@
     @include font-main(22px, 700, 30px);
 
     grid-row: 3/4;
-    // padding-top: 30px;
     grid-column: 1/2;
     @include media-breakpoint-up($sm) {
       @include visually-hidden;
@@ -165,7 +181,7 @@
       justify-self: start;
     }
 
-    @include media-breakpoint-down($xs) {
+    @include media-breakpoint-down($sm) {
       padding-top: 8px;
       column-gap: 6px;
     }
@@ -196,7 +212,7 @@
 
     &::after {
       @include tip-style;
-      @include media-breakpoint-down($xs) {
+      @include media-breakpoint-down($sm) {
         height: 4px;
       }
     }
@@ -219,7 +235,6 @@
       grid-column: 1/2;
       align-self: unset;
       justify-self: center;
-      // width: minmax(273px, 767px);
       width: 100%;
     }
 
@@ -231,24 +246,29 @@
   &__slider {
     grid-row: 4/5;
     grid-column: 1/5;
-    min-height: 200px;
     padding-top: 56px;
+    opacity: 1;
 
     @include media-breakpoint-down($sm) {
       grid-row: 3/4;
       grid-column: 1/2;
-      min-height: 191px;
+      height: 200px;
       margin-top: 100px;
       padding-top: 0;
       padding-top: 18px;
       border-top: 2px solid $grid-color;
+      transform: translateY(0);
+      transition: $transition;
     }
 
-    // @include media-breakpoint-down($xs){
-    //   padding-top: 0;
-    //   margin-top: 100px;
-    //   padding-top: 18px;
-    //   min-height: 191px;
-    // }
+    &_hidden {
+      @include media-breakpoint-down($sm) {
+        transform: translateY(20px);
+        visibility: hidden;
+        opacity: 0;
+        transition: $transition;
+        transition-duration: 1ms;
+      }
+    }
   }
 }
