--- a/src/components/Switcher/Switcher.scss
+++ b/src/components/Switcher/Switcher.scss
@@ -36,7 +36,7 @@
     border: 1px solid transparent;
     border-radius: 50%;
     cursor: pointer;
-
+    transition: $transition;
     @include media-breakpoint-down($sm) {
       position: initial;
       width: 6px;
@@ -48,6 +48,7 @@
       background: $background-color;
       border: 1px solid $button-border-color;
       transition: $transition;
+      transition-delay: 300ms;
     }
   }
 
@@ -63,6 +64,7 @@
     visibility: visible;
     cursor: pointer;
     opacity: 1;
+    transition: $transition;
 
     @include media-breakpoint-down($sm) {
       opacity: 0.4;
@@ -72,8 +74,7 @@
   &__button-index {
     @include font-main(20px, 400, 30px);
 
-    visibility: hidden;
-    opacity: 0;
+    font-size: 1px;
   }
 
   &__button-label {
@@ -102,8 +103,12 @@
 
   &__button-wrapper_active &__button-index,
   &__button-wrapper:hover &__button-index {
-    visibility: visible;
-    opacity: 1;
+    width: 56px;
+    height: 56px;
+    font-size: 20px;
+    transition: $transition;
+    // visibility: visible;
+    // opacity: 1;
 
     @include media-breakpoint-down($sm) {
       visibility: hidden;
