--- a/src/components/Switcher/Switcher.scss
+++ b/src/components/Switcher/Switcher.scss
@@ -98,6 +98,7 @@
     @include media-breakpoint-down($sm) {
       background-color: $text-color;
       opacity: 1;
+      transition: none;
     }
   }
 
@@ -107,11 +108,10 @@
     height: 56px;
     font-size: 20px;
     transition: $transition;
-    // visibility: visible;
-    // opacity: 1;
 
     @include media-breakpoint-down($sm) {
       visibility: hidden;
+      font-size: 1px;
     }
   }
 
